Fix Classic css a bit
Went back to classic theme since I can actually adjust the css a bit
to get the loggers all in the row and just less other stuff to fix
in the template. But yeah doesn't look as fancy.

* add scripts
* won't need show source action since this theme comes with them.

--- a/docs/source/_static/css/classic_ext.css
+++ b/docs/source/_static/css/classic_ext.css
@@ -1,4 +1,4 @@
-html {
+/*html {
   height: 100%;
 }
 
@@ -21,5 +21,22 @@ div.footer, div.document:after {
 }
 
 div.footer {
-  background-color: #11303d;
+  background-color: ;
+}*/
+
+div.bodywrapper {
+
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 250px;
+}
+
+div.body {
+    min-width: 360px;
+    max-width: 1200px;
+}
+
+div.footer {
+    box-shadow: 0 50vh 0 50vh #11303d;
 }
